--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const today = new Date();
 			<span class="sr-only">Website</span>
 			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-globe"><circle cx="12" cy="12" r="10"/><path d="M12 2a14.5 14.5 0 0 0 0 20"/><path d="M2 12h20"/></svg>
 		</a>
-		<a href="https://twitter.com/jackykit" target="_blank">
+		<a href="https://twitter.com/kitjacky" target="_blank">
 			<span class="sr-only">Follow JK on Twitter</span>
 			<svg viewBox="0 0 16 16" aria-hidden="true" width="24" height="24"
 				><path
