--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} JK Labs. All rights reserved. [AI Secretary: Cheese 🤪]
+	&copy; {today.getFullYear()} JK Labs. All rights reserved. [AI Secretary: Cheese 🐯]
 	<div class="social-links">
 		<a href="https://jackykit.com" target="_blank">
 			<span class="sr-only">Website</span>
