--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Providers from '../components/Providers.jsx';
 import Hero from '../components/Hero.jsx';
+import NeuralSync from '../components/NeuralSync.jsx';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -14,6 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Providers client:load>
+			<NeuralSync client:load />
 			<Header />
 			<main>
 				<Hero client:load />
