--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import avatar from '../assets/cheese-avatar.jpg';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="zh-TW">
 	<head>
 		<BaseHead title={`About | ${SITE_TITLE}`} description={SITE_DESCRIPTION} />
 		<style>
