--- a/src/pages/about-dynamic.astro
+++ b/src/pages/about-dynamic.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { GenUIProvider } from '../components/GenUI/GenUIProvider';
 import { AboutDynamic } from '../components/AboutDynamic';
 import avatar from '../assets/cheese-avatar.jpg';
 ---
@@ -23,6 +24,8 @@ import avatar from '../assets/cheese-avatar.jpg';
 		</style>
 	</head>
 	<body>
-		<AboutDynamic avatar={avatar.src} />
+		<GenUIProvider>
+			<AboutDynamic avatar={avatar.src} />
+		</GenUIProvider>
 	</body>
 </html>
