feat: UI/UX 优化 - zh-TW 语言标准化
- Header: 首頁、部落格、關於
- BlogPost: zh-TW lang 屬性
- BlogPost: 最後更新於翻譯
- Build 驗證通過 (164 頁)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import HeaderLink from './HeaderLink.astro';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/">首頁</HeaderLink>
+			<HeaderLink href="/blog">部落格</HeaderLink>
+			<HeaderLink href="/about">關於</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://twitter.com/kitjacky" target="_blank">
