--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,7 +26,7 @@ const articleSchema = {
 };
 ---
 
-<html lang="en">
+<html lang="zh-TW">
 	<head>
 		<BaseHead
 			title={title}
@@ -255,7 +255,7 @@ const articleSchema = {
 							{
 								updatedDate && (
 									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
+										最後更新於 <FormattedDate date={updatedDate} />
 									</div>
 								)
 							}
